[gd_scene load_steps=11 format=2]

[ext_resource path="res://src/Enemy.gd" type="Script" id=1]
[ext_resource path="res://assets/sounds/bug_death.wav" type="AudioStream" id=2]
[ext_resource path="res://assets/enemy.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 13.0707, 8.02938 )

[sub_resource type="Animation" id=2]
resource_name = "attack"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack"
} ]
}

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "emit_die"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Particles2D:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("AudioStreamPlayer")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "idle"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="ParticlesMaterial" id=5]
lifetime_randomness = 1.0
emission_shape = 1
emission_sphere_radius = 5.69
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 70.0
initial_velocity_random = 1.0
angular_velocity = 131.66
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 9.14
radial_accel = 5.0
radial_accel_random = 1.0
scale = 4.0
scale_random = 1.0
color = Color( 0.682353, 0.364706, 0.25098, 1 )
hue_variation = 0.1
hue_variation_random = 1.0

[sub_resource type="CircleShape2D" id=6]
radius = 101.587

[sub_resource type="CircleShape2D" id=7]
radius = 17.8582

[node name="enemy" type="KinematicBody2D"]
position = Vector2( -0.620239, 0 )
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )
hframes = 7
frame = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack = SubResource( 2 )
anims/die = SubResource( 3 )
anims/idle = SubResource( 4 )

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( 0.148232, -0.370586 )
emitting = false
amount = 60
lifetime = 1.5
one_shot = true
explosiveness = 1.0
randomness = 1.0
process_material = SubResource( 5 )

[node name="threat_detection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="threat_detection"]
shape = SubResource( 6 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="attack_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack_area"]
shape = SubResource( 7 )

[node name="StepPlayer" type="AudioStreamPlayer2D" parent="."]

[connection signal="body_entered" from="threat_detection" to="." method="_on_threat_detection_body_entered"]
[connection signal="body_entered" from="attack_area" to="." method="_on_attack_area_body_entered"]
